# checkmsg

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  catalog.md  curriculum.md  diagnose.md  techniques.md
examples/: 01_diamond_vs_moissanite_vs_cz.py  02_natural_vs_synthetic_ruby.py  03_emerald_vs_green_glass.py  04_sapphire_origin.py  05_multi_laser_temperature.py  06_epr_unpaired_electrons.py  07_laicpms_complex_cases.py  08_diamond_simulant_carousel.py  09_blue_stone_disambiguation.py  10_garnet_species_suite.py  11_jade_family_confusion.py  12_tourmaline_species.py  13_red_gems_carousel.py  14_black_opaque_stones.py  15_quartz_treatment_history.py  16_chrysoberyl_trio.py  17_biomineral_disambiguation.py  18_treatment_detection.py  19_unknown_stone_capstone.py  20_muon_tomography.py  _common.py
tests/: conftest.py  test_diagnose.py  test_diagnose_followup.py  test_docs_tools.py  test_epr_centers.py  test_epr_quant.py  test_epr_simulate.py  test_epr_spin_system.py  test_examples_smoke.py  test_identify.py  test_io_and_cli.py  test_laicpms_data.py  test_laicpms_isotopes.py  test_laicpms_quant.py  test_laicpms_ree.py  test_laicpms_transient.py  test_laicpms_upb.py  test_laser.py  test_libs.py  test_match.py  test_microwave.py  test_minerals_catalog.py  test_minerals_synthesis.py  test_muon_forward.py  test_muon_physics.py  test_muon_reconstruct.py  test_muon_source.py  test_muon_voxel.py  test_muonic_xray.py  test_peaks.py  test_preprocess.py  test_raman.py  test_rruff_mock.py  test_spectrum.py  test_synthetic.py  test_synthetic_laser_temp.py  (+3 more)
(+44 files in other folders)
